# PT34-2016NJ

./: .gitignore  LICENSE  README.md
BeehiveMeasurement/: BeehiveMeasurement.ino  BeehiveMeasurementUnit.cpp  BeehiveMeasurementUnit.hpp  DummySensor.hpp  HX711.cpp  HumiditySensor.cpp  HumiditySensor.hpp  IMeasurementSink.hpp  ISensor.hpp  LightSensor.cpp  LightSensor.h  Measurement.cpp  Measurement.hpp  Packet.cpp  Packet.hpp  PressureSensor.cpp  PressureSensor.hpp  SFE_BMP180.cpp  SerialSender.cpp  SerialSender.hpp  TemperatureSensor.cpp  TemperatureSensor.hpp  Timer.cpp  Timer.hpp  WeightSensor.cpp  WeightSensor.hpp  dht11.cpp  dht11.h  json.cpp  json.hpp
BeehiveMeasurement/sensors/: DummySensor.hpp
Low Level stuk voor ES3/: HX711_low_level.cpp
MeasurementUnit/: CMakeLists.txt
MeasurementUnit/lib/: CMakeLists.txt
MeasurementUnit/lib/include/SmartBeeHive/: BeehiveMeasurementUnit.hpp  IMeasurementSink.hpp  ISensor.hpp  Measurement.hpp  Packet.hpp  SerialSender.hpp  Timer.hpp
MeasurementUnit/lib/include/SmartBeeHive/Testing/: IMeasurementSinkMock.hpp  ISensorMock.hpp  MeasurementSinkMock.hpp  SensorMock.hpp
MeasurementUnit/lib/source/: BeehiveMeasurementUnit.cpp  Measurement.cpp  Packet.cpp  SerialSender.cpp  Timer.cpp
MeasurementUnit/test/: BeehiveMeasurementUnit_UT.cpp  CMakeLists.txt  GoogleTest.cmake
Server/: .gitignore  Makefile  Server.sln  serial_emu.txt
Simulator/: How To Use Simulator.txt  HowTo linux.txt  Makefile  Simulator.sln  dserver  simulator
dht11/: Humidity.cpp  Humidity.h  Temperature.cpp  Temperature.h  dht11.cpp  dht11.h
(+87 files in other folders)
